[package]
name = "flpc_v2"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flpc_v2"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.1"
regex = "1.12.2"
lazy_static = "1.5.0"
# unicode-segmentation = "1.11.0"
