[project]
name = "flpc_v2"
version = "0.3.4"
description = "A Lightning Fast ⚡ Rust-based regex crate wrapper for Python3 to get faster performance. 👾"
maintainers = [{ name = "Adarsh Gourab Mahalik", email = "gourabmahalikadarsh@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
classifiers = [
   "Programming Language :: Rust",
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.1",
]
